# infind

./: .gitignore  README.md
aula1/: CMakeLists.txt
aula1/aula1/: CMakeLists.txt  aula1.cpp  aula1.h
practica1/: Pang.cpp
practica1/Pang/Debug/Pang.tlog/: CL.command.1.tlog  CL.read.1.tlog  Pang.lastbuildstate
practica1/Pang/x64/Debug/: Pang.exe.recipe  Pang.ilk  vc143.idb
practica1/Pang/x64/Debug/Pang.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pang.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
practica2/: Ball.cpp  Ball.h  Pang.cpp  Pang.vcxproj  Pang.vcxproj.filters  Player.cpp  Player.h  World.cpp  World.h
practica2/Pang/Debug/: vc143.idb
practica2/Pang/Debug/Pang.tlog/: CL.write.1.tlog
practica2/Pang/x64/Debug/: Pang.exe.recipe  Pang.ilk  vc143.idb
practica2/Pang/x64/Debug/Pang.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pang.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
practica3/: Ball.cpp  Ball.h  Bonus.h  Box.h  Pang.vcxproj  Pang.vcxproj.filters  Player.cpp  Player.h  Shot.h  Vector.h  Wall.h  World.cpp  World.h
practica4/: Ball.cpp  Ball.h  Color.h  Interaction.cpp  Interaction.h  Pang.cpp  Pang.vcxproj  Pang.vcxproj.filters  Player.cpp  Player.h  Shot.cpp  Shot.h  Vector.h  Wall.cpp  Wall.h  World.cpp  World.h
